--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  charts_flutter: ^0.11.0
+  graphic: ^0.0.1
+  cloud_firestore: ^2.5.3
+  firebase_auth: ^3.1.1
 
 dev_dependencies:
   flutter_test:
