--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,8 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
+android/app/google-services.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
