--- a/.gitignore
+++ b/.gitignore
@@ -186,5 +186,18 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
 # Secrets
 womenshealth-1186b-firebase-adminsdk-lojf4-1123978aa1.json
