--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   graphic: ^0.0.1
   firebase_core: ^1.6.0
   cloud_firestore: ^2.5.3
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
